src/objects/SFDC_Referring_Employee__c.object
<CustomObject>
    <description>Company employee who has referred an applicant</description>
    <fields>
        <fullName>Employee_Email__c</fullName>
        <label>Employee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee_ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Phone_Number__c</fullName>
        <label>Employee Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employee_Start_Date__c</fullName>
        <label>Employee Start Date</label>
        <type>Date</type>
    </fields>
    <label>Referring Employee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employee_Email__c</columns>
        <columns>Employee_Phone_Number__c</columns>
        <columns>Employee_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Referring Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referring Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>